@@ -4,6 +4,7 @@ import static java.util.function.Predicate.not;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
+import io.kafbat.ui.api.model.ErrorResponse;
 import io.kafbat.ui.model.ConnectorDTO;
 import io.kafbat.ui.model.ConnectorPluginConfigDTO;
 import io.kafbat.ui.model.ConnectorPluginConfigValidationResponseDTO;
@@ -26,7 +27,7 @@ import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.test.web.reactive.server.WebTestClient;
 
 @Slf4j
-public class KafkaConnectServiceTests extends AbstractIntegrationTest {
+class KafkaConnectServiceTests extends AbstractIntegrationTest {
   private final String connectName = "kafka-connect";
   private final String connectorName = UUID.randomUUID().toString();
   private final Map<String, Object> config = Map.of(
@@ -43,7 +44,8 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
 
 
   @BeforeEach
-  public void setUp() {
+  void setUp() {
+
     webTestClient.post()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors", LOCAL, connectName)
         .bodyValue(new NewConnectorDTO()
@@ -53,15 +55,14 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
                 "tasks.max", "1",
                 "topics", "output-topic",
                 "file", "/tmp/test",
-                "test.password", "test-credentials"
-            ))
-        )
+                "test.password", "test-credentials")))
         .exchange()
         .expectStatus().isOk();
+
   }
 
   @AfterEach
-  public void tearDown() {
+  void tearDown() {
     webTestClient.delete()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}", LOCAL,
             connectName, connectorName)
@@ -70,7 +71,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldListAllConnectors() {
+  void shouldListAllConnectors() {
     webTestClient.get()
             .uri("/api/clusters/{clusterName}/connectors", LOCAL)
             .exchange()
@@ -81,7 +82,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldFilterByNameConnectors() {
+  void shouldFilterByNameConnectors() {
     webTestClient.get()
             .uri(
                     "/api/clusters/{clusterName}/connectors?search={search}",
@@ -95,7 +96,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldFilterByStatusConnectors() {
+  void shouldFilterByStatusConnectors() {
     webTestClient.get()
             .uri(
                     "/api/clusters/{clusterName}/connectors?search={search}",
@@ -109,7 +110,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldFilterByTypeConnectors() {
+  void shouldFilterByTypeConnectors() {
     webTestClient.get()
             .uri(
                     "/api/clusters/{clusterName}/connectors?search={search}",
@@ -123,7 +124,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldNotFilterConnectors() {
+  void shouldNotFilterConnectors() {
     webTestClient.get()
             .uri(
                     "/api/clusters/{clusterName}/connectors?search={search}",
@@ -137,7 +138,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldListConnectors() {
+  void shouldListConnectors() {
     webTestClient.get()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors", LOCAL, connectName)
         .exchange()
@@ -147,7 +148,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldReturnNotFoundForNonExistingCluster() {
+  void shouldReturnNotFoundForNonExistingCluster() {
     webTestClient.get()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors", "nonExistingCluster",
             connectName)
@@ -156,7 +157,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldReturnNotFoundForNonExistingConnectName() {
+  void shouldReturnNotFoundForNonExistingConnectName() {
     webTestClient.get()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors", LOCAL,
             "nonExistingConnect")
@@ -165,8 +166,8 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldRetrieveConnector() {
-    ConnectorDTO expected = (ConnectorDTO) new ConnectorDTO()
+  void shouldRetrieveConnector() {
+    ConnectorDTO expected = new ConnectorDTO()
         .connect(connectName)
         .status(new ConnectorStatusDTO()
             .state(ConnectorStateDTO.RUNNING)
@@ -187,7 +188,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldUpdateConfig() {
+  void shouldUpdateConfig() {
     webTestClient.put()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}/config",
             LOCAL, connectName, connectorName)
@@ -218,7 +219,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldReturn400WhenConnectReturns400ForInvalidConfigCreate() {
+  void shouldReturn400WhenConnectReturns400ForInvalidConfigCreate() {
     var connectorName = UUID.randomUUID().toString();
     webTestClient.post()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors", LOCAL, connectName)
@@ -244,7 +245,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldReturn400WhenConnectReturns500ForInvalidConfigCreate() {
+  void shouldReturn400WhenConnectReturns500ForInvalidConfigCreate() {
     var connectorName = UUID.randomUUID().toString();
     webTestClient.post()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors", LOCAL, connectName)
@@ -268,19 +269,28 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
 
 
   @Test
-  public void shouldReturn400WhenConnectReturns400ForInvalidConfigUpdate() {
+  @SuppressWarnings("checkstyle:LineLength")
+  void shouldReturn400WhenConnectReturns400ForInvalidConfigUpdate() {
     webTestClient.put()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}/config",
             LOCAL, connectName, connectorName)
         .bodyValue(Map.of(
-            "connector.class", "org.apache.kafka.connect.file.FileStreamSinkConnector",
-            "tasks.max", "invalid number",
-            "topics", "another-topic",
-            "file", "/tmp/test"
+                "connector.class", "org.apache.kafka.connect.file.FileStreamSinkConnector",
+                "tasks.max", "invalid number",
+                "topics", "another-topic",
+                "file", "/tmp/test"
             )
         )
         .exchange()
-        .expectStatus().isBadRequest();
+        .expectStatus().isBadRequest()
+        .expectBody(ErrorResponse.class)
+        .value(response -> assertThat(response.getMessage()).isEqualTo(
+            """
+                Connector configuration is invalid and contains the following 2 error(s):
+                Invalid value invalid number for configuration tasks.max: Not a number of type INT
+                Invalid value null for configuration tasks.max: Value must be non-null
+                You can also find the above list of errors at the endpoint `/connector-plugins/{connectorType}/config/validate`"""
+        ));
 
     webTestClient.get()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}/config",
@@ -300,7 +310,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldReturn400WhenConnectReturns500ForInvalidConfigUpdate() {
+  void shouldReturn400WhenConnectReturns500ForInvalidConfigUpdate() {
     webTestClient.put()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}/config",
             LOCAL, connectName, connectorName)
@@ -329,7 +339,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldRetrieveConnectorPlugins() {
+  void shouldRetrieveConnectorPlugins() {
     webTestClient.get()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/plugins", LOCAL, connectName)
         .exchange()
@@ -339,7 +349,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldSuccessfullyValidateConnectorPluginConfiguration() {
+  void shouldSuccessfullyValidateConnectorPluginConfiguration() {
     var pluginName = "FileStreamSinkConnector";
     var path =
         "/api/clusters/{clusterName}/connects/{connectName}/plugins/{pluginName}/config/validate";
@@ -360,7 +370,7 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
   }
 
   @Test
-  public void shouldValidateAndReturnErrorsOfConnectorPluginConfiguration() {
+  void shouldValidateAndReturnErrorsOfConnectorPluginConfiguration() {
     var pluginName = "FileStreamSinkConnector";
     var path =
         "/api/clusters/{clusterName}/connects/{connectName}/plugins/{pluginName}/config/validate";
@@ -383,16 +393,16 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
               .map(ConnectorPluginConfigDTO::getValue)
               .map(ConnectorPluginConfigValueDTO::getErrors)
               .filter(not(List::isEmpty))
-              .findFirst().get();
+              .findFirst().orElseThrow();
           assertEquals(
               "Invalid value 0 for configuration tasks.max: Value must be at least 1",
-              error.get(0)
+              error.getFirst()
           );
         });
   }
 
   @Test
-  public void shouldReturn400WhenTryingToCreateConnectorWithExistingName() {
+  void shouldReturn400WhenTryingToCreateConnectorWithExistingName() {
     webTestClient.post()
         .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors", LOCAL, connectName)
         .bodyValue(new NewConnectorDTO()
@@ -407,5 +417,57 @@ public class KafkaConnectServiceTests extends AbstractIntegrationTest {
         .exchange()
         .expectStatus()
         .isBadRequest();
+  }
+
+  @Test
+  void shouldResetConnectorWhenInStoppedState() {
+
+    webTestClient.get()
+        .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}",
+            LOCAL, connectName, connectorName)
+        .exchange()
+        .expectStatus().isOk()
+        .expectBody(ConnectorDTO.class)
+        .value(connector -> assertThat(connector.getStatus().getState()).isEqualTo(ConnectorStateDTO.RUNNING));
+
+    webTestClient.post()
+        .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}/action/STOP",
+            LOCAL, connectName, connectorName)
+        .exchange()
+        .expectStatus().isOk();
+
+    webTestClient.get()
+        .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}",
+            LOCAL, connectName, connectorName)
+        .exchange()
+        .expectStatus().isOk()
+        .expectBody(ConnectorDTO.class)
+        .value(connector -> assertThat(connector.getStatus().getState()).isEqualTo(ConnectorStateDTO.STOPPED));
+
+    webTestClient.delete()
+        .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}/offsets",
+            LOCAL, connectName, connectorName)
+        .exchange()
+        .expectStatus().isOk();
+
+  }
+
+  @Test
+  void shouldReturn400WhenResettingConnectorInRunningState() {
+
+    webTestClient.get()
+        .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}",
+            LOCAL, connectName, connectorName)
+        .exchange()
+        .expectStatus().isOk()
+        .expectBody(ConnectorDTO.class)
+        .value(connector -> assertThat(connector.getStatus().getState()).isEqualTo(ConnectorStateDTO.RUNNING));
+
+    webTestClient.delete()
+        .uri("/api/clusters/{clusterName}/connects/{connectName}/connectors/{connectorName}/offsets", LOCAL,
+            connectName, connectorName)
+        .exchange()
+        .expectStatus().isBadRequest();
+
   }
 }
